@@ -1,7 +1,8 @@
 Release CMTK-1.3.0:
 
-- Fix: volume_reconstruction tool now converts ITK transformations from native
-    into standard space (Issue #4761).
+- Fix: volume_reconstruction and volume_injection tools now convert affine ITK
+    transformations (i.e., such read from .tfm files) from native into
+    standard space (Issue #4761).
 - API: made all meta key strings C++ objects rather than cpp #defines; also
     removed CMTK_ prefix after moving them into cmtk namespace.
 - API: renamed "InformationObject" class to more descriptive
